<resources>
    <string name="app_name">ReoTwé</string>
    <string name="flattr_this">Micro-Donate !</string>
    <string name="projPage">Info Website</string>
    <string name="preferences">Preferences</string>
    <string name="apihint">get it on http://apps.twitter.com</string>
    <string name="search">search @userA or @userB,#tag1,#tag2</string>
    <string name="imageful">Full image stuff</string>
    <string name="statsGoto"> ⇆ %1$d ★ %2$d %3$s &gt;</string>
    <string name="defaultStarts">\@GeneHunt,@The_Pi_Hole,@amnesty,@adafruit,@Princessofwifi,#maker,@istdasvegan,@MartinSonneborn,@DLF,@evalodde,@ProletDo,@ViccoVonBuelow,@tazgezwitscher</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="closing">Closing %1$s ?</string>
    <string name="sureToClose">Are you sure you want to close me?</string>
    <string name="usersAndTags">users and tags</string>
    <string name="favAdded">new favourite(s) added</string>
    <string name="usersAndTags_summary">You can add your favourit users, keywords and hastags in these lines. E.g.: @user1,@user32,#tagImportant42,@fails,#epic69,...</string>
    <string name="makeTweet">make tweet …</string>
    <string name="youNeedApiKey">You need a valid API Key and Secret, too!</string>
    <string name="ready">ready.</string>

    <string name="nightmode">Nightmode</string>
    <string name="nightmode_summary">between a timespan the App is optimized for a dark environment</string>
    <string name="nightmode_use">dark</string>
    <string name="nightmode_use_start">from …:00 o\'clock</string>
    <string name="nightmode_use_stop">to …:59 o\'clock</string>

    <string name="hintFollowUser">click here to go to user</string>
    <string name="hintFollowThis">click here to go to XYZ</string>
    <string name="hintClickLoadFull">Click on content to see the imageful total #XYZ tweet. If the full tweet is loaded, a click opens or plays media or it opens a website. You need your own API-Key and API-Secret to run this app. Use the preferences (options menu) to add these keys.</string>
    <string name="hintOoops">The Twitter request was with stupid. You need a *VALID* API-key and API-Secret to run this app. Use the preferences in the left sidebar to add these keys.</string>
    <string name="hintRTuser">the username, who retweet this tweet</string>

    <string name="Quit">Quit</string>
    <string name="Ooops">Ooops!</string>
    <string name="exit_title">Restart App Now</string>
    <string name="exit_message">Because you may changed some important preferences, it is better to restart the App.</string>
    <string name="SessionFail">Twitter Session fail. Maybe your API Key &amp; Secret is wrong?</string>

    <string name="tw__composer_hint">What\'s Happening?</string>
    <string name="tw__post_tweet">Tweet</string>
    <string name="tw__max_tweet_chars">280</string>

    <string name="intro">info &amp; permissions</string>
    <string name="welcome">Welcome!</string>
    <string name="welcomeHint">This is ReoTwé, a unofficial very reduced twitter client.</string>

    <string name="slideDetox">Social Media Detox</string>
    <string name="slideDetoxHint">
        You became hooked on social media and Twitter? If you want to change it, try this App.
        No likes, no retweets, no comments, no notifications to pretend you from addiction.
    </string>

    <string name="slidePriv">Maximal Privacy, but …</string>
    <string name="slidePrivHint">… if you want to take a picture, the App needs cam access (but not file access!)</string>

    <string name="slideApi1">ReoTwé is different</string>
    <string name="slideApiHint1">
Normally all twitter client request go to a man in the middle to analyse
and cache every request.
    </string>
    <string name="slideApi2">No Ads, No BigData</string>
    <string name="slideApiHint2">
WE DO NOT WANT this man in the middle server, who holds API Key and
Secret and sending Ad\'s or do things with our private stuff!
    </string>
    <string name="slideApi3">Your API Key and Secret</string>
    <string name="slideApiHint3">
Your CLIENT ReoTwé have to hold this Keys and YOU have
to generate your own Keys! Visit apps.twitter.com
    </string>
    <string name="slideApi4">Request Limits</string>
    <string name="slideApiHint4">
There are request limits to pretend the
original twitter servers from to many requests.
    </string>

    <string name="slideAlpha">Still Beta Version</string>
    <string name="slideAlphaHint">I have to create slides to give hints to API Key, usage and (anti)features</string>

    <string name="slideHomepage">Visit Homepage</string>
    <string name="slideHomepageHint">If you need more hints about API Key and other stuff, visit me on %1$s</string>

</resources>