<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search"
        android:icon="@drawable/baseline_search_white_24"
        app:showAsAction="always|collapseActionView" />

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/action_allImages"
            android:title="@string/imageful" />
    </group>

    <item
        android:id="@+id/action_project"
        android:title="@string/projPage"></item>

    <item
        android:id="@+id/action_intro"
        android:title="@string/intro"></item>

    <item
        android:id="@+id/action_user_tags"
        android:title="@string/usersAndTags"></item>

    <item
        android:id="@+id/action_preferences2"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/preferences">
    </item>

</menu>
