<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="10dp">

    <ImageView
        android:id="@+id/tweetAvatar"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="@+id/tweetUser"
        android:background="@drawable/tw__composer_logo_blue"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tweetUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/tweetAvatar"
        android:layout_toLeftOf="@+id/tweetStats"
        android:layout_toRightOf="@+id/tweetAvatar"
        android:fontFamily="sans-serif-light"
        android:paddingBottom="5dp"
        android:paddingLeft="2dp"
        android:paddingTop="0dp"
        android:text="@string/hintFollowUser"
        android:textColor="@color/textFront"
        android:textSize="15dp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/tweetContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tweetUser"
        android:elevation="2dp"
        android:padding="0dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp">

        <TextView
            android:id="@+id/tweetText"
            style="@style/tw__TweetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tweetUser"
            android:layout_marginTop="0dp"
            android:paddingBottom="5dp"
            android:text="@string/hintClickLoadFull"
            android:textColor="@color/textFront"
            android:textSize="15dp" />
    </FrameLayout>

    <TextView
        android:id="@+id/tweetDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:elevation="1dp"
        android:paddingRight="5dp"
        android:text="@string/hintFollowThis"
        android:textColor="@color/textFrontLight"
        android:textSize="9dp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/tweetStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tweetDate"
        android:elevation="1dp"
        android:paddingRight="5dp"
        android:text=" ⇆ 123 ★ 453 #XYZ &gt;"
        android:textColor="@color/textFrontLight"
        android:textSize="9dp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/tweetRTname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tweetContent"
        android:paddingRight="5dp"
        android:text="@string/hintRTuser"
        android:textColor="@color/textFrontLight"
        android:textSize="9dp"
        android:textStyle="italic" />

</RelativeLayout>